--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -136,6 +136,7 @@
             </div>
         </div>
         
+        {# Today's Meals - commented out for now
         {% if today_entries %}
         <div class="today-meals">
             <h4>Today's Meals</h4>
@@ -152,7 +153,9 @@
             </div>
         </div>
         {% endif %}
+        #}
         
+        {# Quick Add Preset - commented out for now
         <div class="quick-presets">
             <h4>Quick Add Preset</h4>
             <div class="preset-search-container">
@@ -169,6 +172,7 @@
                 </div>
             </div>
         </div>
+        #}
     </div>
     
     <!-- Custom Metric Cards -->
